--- a/_config.yml
+++ b/_config.yml
@@ -4,16 +4,18 @@ subtitle: Fragmentos da Verdade
 email: guivale@hotmail.com
 description: >-
   Onde pensamentos se tornam palavras, e palavras se tornam mundos;
+  Um espaço para poemas e contos, textos e reflexões, você e eu.
   
-  Um espaço para poemas, contos, textos e reflexões, prosa sobre qualquer assunto 
-  que seja útil para entendermos nosso lugar no infinito... 
+  Tudo que seja útil para entendermos nosso lugar no infinito, 
+  ao relatar sobre fenomenologia à alquimia, psicologia à física...
+  abraçar tudo que for sabedoria, mesmo que soe absurdo. 
+
+  experimentos impossíveis de explicar, dissemos-lhe -
+  "[...]As únicas analogias, muito remotas, que pude estabelecer,
+  encontrei-as dispersas nos relatos dos Heresiólogos*[...]" - Jung.
+  * = o uso dessa palavra aqui, descreve a forma da minha aproximação.
   
-  abraçar tudo que for sabedoria, mesmo que soe absurdo.
-  jung ao relatar sobre experimentos impossiveis de explicar, disse -
-  ""[...]As únicas analogias, muito remotas, que pude estabelecer,
-  encontrei-as dispersas nos relatos dos Heresiólogos[...]
-  o uso dessa palavra aqui, descreve a forma da minha aproximação "dark" 
-  encarar a verdade sobre a natureza do cosmos e da razão como um.
+  buscar a verdade sobre a natureza do cosmos e da razão como um.
 
 baseurl: ""
 url: "https://memeternum.com"
